// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StreetMetaWidthLabel renders when editable 1`] = `
<DocumentFragment>
  <button
    class="street-width street-width-editable"
  >
    <svg />
    <span
      class="underline"
    >
      10 m width
    </span>
    <svg
      class="menu-carat-down"
    />
  </button>
</DocumentFragment>
`;

exports[`StreetMetaWidthLabel renders when not editable 1`] = `
<DocumentFragment>
  <button
    class="street-width"
  >
    <svg />
    <span
      class="underline"
    >
      10 m width
    </span>
  </button>
</DocumentFragment>
`;

exports[`StreetMetaWidthLabel renders with over available width 1`] = `
<DocumentFragment>
  <button
    class="street-width street-width-editable"
  >
    <svg />
    <span
      class="underline"
    >
      10 m width
    </span>
    <span
      class="street-width-over"
    >
      (1 m over)
    </span>
    <svg
      class="menu-carat-down"
    />
  </button>
</DocumentFragment>
`;

exports[`StreetMetaWidthLabel renders with remaining width 1`] = `
<DocumentFragment>
  <button
    class="street-width street-width-editable"
  >
    <svg />
    <span
      class="underline"
    >
      10 m width
    </span>
    <span
      class="street-width-under"
    >
      (1 m room)
    </span>
    <svg
      class="menu-carat-down"
    />
  </button>
</DocumentFragment>
`;
